--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -4277,6 +4277,14 @@ ol.link-bibliography-list-compact > li::before {
 /* PAGE-SPECIFIC MODIFICATIONS */
 /*******************************/
 
+/*=-------------=*/
+/*= /static/404 =*/
+/*=-------------=*/
+
+body.static-404 figure {
+	background-color: var(--GW-body-background-color);
+}
+
 /*=----------------=*/
 /*= /review/book =*/
 /*=----------------=*/
