--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2302,18 +2302,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -4277,6 +4277,14 @@ ol.link-bibliography-list-compact > li::before {
 /* PAGE-SPECIFIC MODIFICATIONS */
 /*******************************/
 
+/*=-------------=*/
+/*= /static/404 =*/
+/*=-------------=*/
+
+body.static-404 figure {
+	background-color: var(--GW-body-background-color);
+}
+
 /*=----------------=*/
 /*= /review/book =*/
 /*=----------------=*/
@@ -5189,14 +5197,14 @@ body.dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5329,7 +5337,7 @@ body.dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5751,14 +5759,14 @@ body.dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6661,7 +6669,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1695478579#question');
+    background-image: url('/static/img/icon/icons.svg?v=1695502497#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7227,7 +7235,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1695478579#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1695502497#circle-notch-solid');
 
     pointer-events: none;
 }
